--- a/student-store/src/App.css
+++ b/student-store/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #9A9A9A;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -22,6 +22,13 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.containers {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: 50px;
+  /* background-color: black; */
 }
 
 .App-link {
@@ -36,3 +43,5 @@
     transform: rotate(360deg);
   }
 }
+
+
